--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
