--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
   },
