--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/ortizfram/nodejs-paypal-rest-api#readme",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
