--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "test": "jest",
+    "prod": "node --omit=dev src/index.js"
   },
   "repository": {
     "type": "git",
