--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "mercadopago": "^2.0.4",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
