--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mercadopago": "^1.5.16",
+    "method-override": "^3.0.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
