--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "marked": "^10.0.0",
@@ -38,6 +39,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "slugify": "^1.6.6"
   },
