--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
+    "nodemailer": "^6.9.7",
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "slugify": "^1.6.6"
