--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^10.0.0",
     "mercadopago": "^1.5.16",
     "method-override": "^3.0.0",
