--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "marked": "^10.0.0",
