--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-validator": "^7.0.1",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.0.0",
     "marked": "^10.0.0",
     "mercadopago": "^1.5.16",
     "method-override": "^3.0.0",
@@ -46,7 +47,8 @@
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
     "pg": "^8.11.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
