added vercel file, start package json

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "prod": "node --omit=dev src/index.js"
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
