move index.js to root

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
