--- a/client/package.json
+++ b/client/package.json
@@ -1,45 +1,42 @@
 {
   "name": "client",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "axios": "^1.6.0",
-    "bcrypt": "^5.1.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1",
-    "express-fileupload": "^1.4.3",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
-    "hbs": "^4.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "markdown-it": "^14.0.0",
-    "marked": "^10.0.0",
-    "mercadopago": "^1.5.16",
-    "method-override": "^3.0.0",
-    "mongodb": "^6.2.0",
-    "mongoose": "^8.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.3",
-    "nodemailer": "^6.9.7",
-    "path": "^0.12.7",
-    "pg": "^8.11.3",
-    "slugify": "^1.6.6",
-    "turndown": "^7.1.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "vite": "^5.0.8",
-    "nodemon": "^3.0.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
