--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -80,11 +80,11 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+# dependencies
+*/node_modules
+*node_modules
+*.env
+*env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
