--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ NODEMAILER_EMAIL=buonavibraclub@gmail.com
 NODEMAILER_PASS=pddi hvup zyvc ykxa #google app password
 #-------------------------------------------------
 # secret key for session management
-SESSION_SECRET=melonmelon583
+SESSION_SECRET="melonmelonnnnn"
 
 # JWT secret
 JWT_SECRET="some super secret ..."
