--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -29,7 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "markdown-it": "^14.0.0",
     "marked": "^10.0.0",
-    "mercadopago": "^1.5.16",
+    "mercadopago": "^2.0.6",
     "method-override": "^3.0.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
