--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT= 3000
+PORT= 8081
 HOST= "http://localhost:"
 
 # cors
-FRONTEND_URL= "http://127.0.0.1:5173"
-BACKEND_URL= "http://localhost:3000"
+FRONTEND_URL= "http://localhost:3000"
+BACKEND_URL= "http://localhost:8081"
 
 # =============================
 # PAYPAL ----------------------------------------
