--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
