--- a/.env
+++ b/.env
@@ -28,14 +28,14 @@ ADMIN= req.session.user.id === "1"
 ADMIN_EMAIL=ortizfranco48@gmail.com
 # NODEMAILER-------------------------------------------------
 # factor 2 authentication must be turned on
-NODEMAILER_EMAIL=buonavibraclub@gmail.com
-NODEMAILER_PASS=pddi hvup zyvc ykxa #google app password
+NODEMAILER_EMAIL=ortizfranco48@gmail.com
+NODEMAILER_PASS=wync qidk shbf ysgk #google app password
 #-------------------------------------------------
 # secret key for session management
 SESSION_SECRET="melonmelonnnnnn"
 
 # JWT secret
-JWT_SECRET="some super secret ..."
+JWT_SECRET="some super secretk ..."
 #-------------------------------------------------
 # POSTGRESS DB: railway
 DB_USER = root
