--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ MP_SANDBOX_ACCESS_TOKEN= APP_USR-5515732634583366-041314-ec570362e074ca511a960a0
 
 # ADMIN-------------------------------------------------
 ADMIN= req.session.user.id === "1"
-ADMIN_EMAIL=ortizfranco48@gmail.com
+ADMIN_EMAILS=ortizfranco48@gmail.com,mg.marcela@hotmail.com,buonavibraclub@gmail.com,marzettimarcela@gmail.com
 # NODEMAILER-------------------------------------------------
 # factor 2 authentication must be turned on
 NODEMAILER_EMAIL=ortizfranco48@gmail.com
