--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ ADMIN_EMAILS=ortizfranco48@gmail.com,mg.marcela@hotmail.com,buonavibraclub@gmail
 # NODEMAILER-------------------------------------------------
 # factor 2 authentication must be turned on
 NODEMAILER_EMAIL=ortizfranco48@gmail.com
-NODEMAILER_PASS=wync qidk shbf ysgk #google app password
+NODEMAILER_PASS=mnxj ukcr muov yidg #google app password
 #-------------------------------------------------
 # secret key for session management
 SESSION_SECRET="melonmelonnnnnn"
