--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
