--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --env-file .env server.js",
-    "start": "cross-env NODE_ENV=production node --env-file .env server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --require dotenv/config  server.js",
+    "start": "cross-env NODE_ENV=production node --require dotenv/config  server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
