server upload files config

--- a/.env
+++ b/.env
@@ -34,6 +34,9 @@ mac_vendedor
 TEST00320
 NYRmfo9pvb
 
+FRONTEND_URL="localhost:3000"
+BACKEND_URL="localhost:6000"
+
 MP_NOTIFICATION_URL=https://c145-181-90-218-174.ngrok.io
 
 sandbox user credentials
