--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "marked": "^10.0.0",
     "mercadopago": "^2.0.6",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
