--- a/.env
+++ b/.env
@@ -5,8 +5,12 @@
 ```
 # PAYPAL ----------------------------------------
 # sandbox paypal creds
-PAYPAL_API_CLIENT=Af6pMZ2zmf5Jp_1UyQ7L8XChSmvEvOCwyImaJhHzYU5FSSG5B-pU0Gij7AVhnpFfqH-uZlgiR4JCMv_c
-PAYPAL_API_SECRET=EKcLYJRKNiW8xh8jyc34GXfAif6B6_B9AbJk8bNJXPNP-S6lFNLc_MPc45uzlLllXTehitEGdbzKNiYR
+SB_PAYPAL_API_CLIENT=Af6pMZ2zmf5Jp_1UyQ7L8XChSmvEvOCwyImaJhHzYU5FSSG5B-pU0Gij7AVhnpFfqH-uZlgiR4JCMv_c
+SB_PAYPAL_API_SECRET=EKcLYJRKNiW8xh8jyc34GXfAif6B6_B9AbJk8bNJXPNP-S6lFNLc_MPc45uzlLllXTehitEGdbzKNiYR
+PAYPAL_API_CLIENT=productionclient  
+PAYPAL_API_SECRET=productionsecret
+SB_PAYPAL_API=https://api-m.sandbox.paypal.com
+PAYPAL_API=https://paypal.com
 
 # sandbox
 # paypal sandbox: buyer/personal account 
