FRONT ABACK URLS as constants

--- a/.env
+++ b/.env
@@ -42,11 +42,14 @@ NYRmfo9pvb
 FRONTEND_URL="localhost:3000"
 BACKEND_URL="localhost:5001"
 
-MP_NOTIFICATION_URL=https://c145-181-90-218-174.ngrok.io
+MP_SB_NOTIFICATION_URL=https://c145-181-90-218-174.ngrok.io
+MP_NOTIFICATION_URL=null
 
 sandbox user credentials
-MP_SANDBOX_PUBLIC_KEY= TEST-602c250f-2fcb-473a-9e68-c93660ceadb3
-MP_SANDBOX_ACCESS_TOKEN= TEST-26307141873052-111711-dd87103637f16cc35edfc195ecaad7b6-1392322729
+MP_SB_PUBLIC_KEY= TEST-602c250f-2fcb-473a-9e68-c93660ceadb3
+MP_SB_ACCESS_TOKEN= TEST-26307141873052-111711-dd87103637f16cc35edfc195ecaad7b6-1392322729
+MP_PUBLIC_KEY= APP_USR-ab1a43d2-4e1f-46cd-a156-9bdb84770545
+MP_ACCESS_TOKEN= APP_USR-5515732634583366-041314-ec570362e074ca511a960a0f3ce5662f-206989041
 
 # ADMIN-------------------------------------------------
 ADMIN= req.session.user.id === "1"
