--- a/.env
+++ b/.env
@@ -20,8 +20,10 @@ password = |oX_6>Ak
 # paypal sandbox: merchant/business account
 email = sb-xkytn27891955@business.example.com
 password = 0nh?6}nG
-
 # real
+# paypal: merchant/business account
+email = marzettimarcela@gmail.com
+password = Marze2023
 
 # MERCADOPAGO -------------------------------------------------
 # sandbox OG user
@@ -55,6 +57,9 @@ MP_ACCESS_TOKEN= APP_USR-5515732634583366-041314-ec570362e074ca511a960a0f3ce5662
 ADMIN= req.session.user.id === "1"
 ADMIN_EMAIL=a@a.com
 # NODEMAILER-------------------------------------------------
+# factor 2 authentication must be turned on
+NODEMAILER_PROD_EMAIL=buonavibraclub@gmail.com
+NODEMAILER_PROD_PASS=pddi hvup zyvc ykxa #google app password
 NODEMAILER_EMAIL=ortizfranco48@gmail.com
 NODEMAILER_PASS=ohlxtzbfnyisutzz #google app password
 #-------------------------------------------------
