--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.9",
     "path": "^0.12.7",
     "pg": "^8.11.3",
