webhook .env working (KEEP)

--- a/.env
+++ b/.env
@@ -44,7 +44,8 @@ NYRmfo9pvb
 FRONTEND_URL="localhost:3000"
 BACKEND_URL="localhost:5002"
 
-MP_SB_NOTIFICATION_URL=https://c145-181-90-218-174.ngrok.io
+# first create a MP app then try webhooks after having created your https url with NGROK
+MP_SB_NOTIFICATION_URL=https://dca5-201-251-124-106.ngrok-free.app #has to be same port as server
 MP_NOTIFICATION_URL=null
 
 sandbox user credentials
