--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
