--- a/.env
+++ b/.env
@@ -68,7 +68,8 @@ NODEMAILER_PASS=ohlxtzbfnyisutzz #google app password
 SESSION_SECRET=melonmelon583
 
 # JWT secret
-JWT_SECRET="some super secret ..."
+JWT_SECRET_KEY =R4GN4RisMyG0d
+JWT_REFRESH_SECRET_KEY =R4GN4RisMyG0d&Floki1sM4d
 #-------------------------------------------------
 # POSTGRESS DB: railway
 DB_USER = root
