--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
